--- a/index.html
+++ b/index.html
@@ -1,1 +1,142 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfoli Ivan Linares</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" type="image/x-jpg" href="./img/favicon/lido.jpg">
+</head>
+
+<body>
+
+  <div class="wrapper">
+    <header>
+      <nav class="navbar">
+        <div class="brand">
+          <h2>LI<span>DO</span></h2>
+        </div>
+        <ul class="menu">
+          <li><a class="active" href="#">Inici</a></li>
+          <li><a href="#SM">Sobre mi</a></li>
+          <li><a href="#PO">Portafoli</a></li>
+          <li><a href="#CO">Contacte</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="main">
+      <div class="infocontent">
+        <h1><span>Ivan</span> Linares</h1>
+        <p>Soc Ivan Linares Domínguez i aquest es el meu Portafoli fet amb Html i Css.</p>
+        <a download href="cv/CV PLANTILLA ivan linares.docx.pdf" target="_blank">
+          <button class="download-cv"> Curriculum vitae</button>
+        </a>
+      </div>
+      <img src="./img/ivanlinares.jpg"alt="Ivan Linares foto">
+    </main>
+  </div>
+
+  <div class="about">
+    <img src="./img/ivanlinaresespejo.jpg" alt="imagen Ivan Linares">
+    <div class="about-info">
+      <h2 id="SM">Sobre Mi</h2>
+      <div class="divider"></div>
+      <p>Soc Ivan Linares Domínguez, estudio a un grau mig d'informàtica a l'Institut
+        La Ferreria en Montcada, per plans futur faré una doble titulació de grau superior
+        d'informàtica, seguidament aniré a la universitat.</p>
+        <a href="./cv/CARTA PRESENTACIÓ ivan linares.pdf" download; target="_blank">
+        <button class="download-cv">Carta de Presentació</button>
+        </a>
+    </div>
+  </div>
+
+  <div class="portafolio">
+    <div class="portafolio-headings">
+      <h2 id="PO">El meu portafoli</h2>
+      <div class="divider"></div>
+    </div>
+    <div class="container">
+      <div class="card">
+        <div class="card_img">
+        </div>
+        <div class="card_title">
+          <h2>Futurs projectes</h2>
+        </div>
+        <div class="card_projects-links">
+          <img src="./img/proyectofuturo.png" alt="imagenfuturosproject">
+        </div>
+        <button class="project-details download-cv">
+          <a href="">
+            Pròximament detalls 
+          </a>
+        </button>
+      </div>
+      <div class="card">
+        <div class="card_img">
+        </div>
+        <div class="card_title">
+          <h2>Futurs projectes</h2>
+        </div>
+        <div class="card_projects-links">
+          <img src="./img/proyectofuturo.png" alt="imagenfuturosproject">
+        </div>
+        <button class="project-details download-cv">
+          <a href="">
+            Pròximament detalls 
+          </a>
+        </button>
+      </div>
+      <div class="card">
+        <div class="card_img">
+        </div>
+        <div class="card_title">
+          <h2>Futurs projectes</h2>
+        </div>
+        <div class="card_projects-links">
+          <img src="./img/proyectofuturo.png" alt="imagenfuturosproject">
+        </div>
+        <button class="project-details download-cv">
+          <a href="">
+            Pròximament detalls  
+          </a>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="contacto">
+    <div class="contact-headings">
+      <h2 id="CO">Mantenir-se en contacte</h2>
+      <div class="divider"></div>
+    </div>
+
+    <div class="container-contact">
+      <img src="./img/ilinaresascensor.jpg" alt="Ivan Linares Contacto">
+      <div class="contact-form">
+        <h4>Enviem un missatge</h4>
+        <form class="form">
+          <input type="text" placeholder="Nom">
+          <input type="email" placeholder="Email">
+          <textarea placeholder="Deixa el teu missatge aquí"></textarea>
+          <button class="btn-submit">Enviar missatge </button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <footer class="footer">
+    <div class="footer-content">
+      <h2>Ivan Linares</h2>
+      <h5>Xarxes Socials</h5>
+    </div>
+    <div class="social-network">
+      <a href="https://www.instagram.com/linaaresdm/" target="_blank"><img src="./img/rd/Instagram.png"></a>
+      <a href="https://twitter.com/Mr__lido" target="_blank"><img src="./img/rd/tw.png"></a>
+      <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank"><img src="./img/rd/link.png"></a>
+    </div>
+  </footer>
+</body>
+
+</html>
